fixing horizontal scroll on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -44,6 +44,9 @@ img {
   body {
     overflow-x: hidden !important;
   }
+  html {
+    overflow-x: hidden;
+  }
 }
 
 //----------------------------- Imports
